initial test commit

--- a/cakeClicker.html
+++ b/cakeClicker.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <!--
-TODO: This is a comment. Change this header comment to describe the 
-web page and include your name as author.
+Authors: Harshini Lakshman and Amanda Gbe
+Date: February 4th, 2026
+Description: This is the HTML file for the incremental clicker game, based on Cookie Clicker, using our own theme
+and reward systems.
 -->
 <html>
 
 <head>
     <meta charset="utf-8">
-    <title>TODO: Title Goes Here</title>
+    <title>Cake Clicker Game</title>
 </head>
 
 <body>
