initial html structure

--- a/cakeClicker.html
+++ b/cakeClicker.html
@@ -13,7 +13,31 @@ and reward systems.
 </head>
 
 <body>
-    <p>TODO: Content goes here.</p>
+    <div id="container">
+        <div id="clickArea">
+            <div id="gameTitle">
+                <h1>Cake Clicker game</h1>
+            </div>
+            <div id="scoreboard"></div>
+            <div id="clickCake">
+                <button id="bigCake"></button>
+            </div>
+        </div>
+
+        <div id="upgradeArea">
+            <div id="storeTitle">
+                <h1>Store: Buy upgrades</h1>
+            </div>
+            <div id="selections"></div>
+        </div>
+
+        <div id="rewardArea">
+            <div id="rewardTitle">
+                <h1>Rewards: Here's what you accomplished</h1>
+            </div>
+            <div id="rewards"></div>
+        </div>
+    </div>
 </body>
 
 </html>
