--- a/cakeClicker.html
+++ b/cakeClicker.html
@@ -10,7 +10,7 @@ and reward systems.
 <head>
     <meta charset="utf-8">
     <title>Cake Clicker Game</title>
-    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./css/cake.css">
 </head>
 
 <body>
