--- a/cakeClicker.html
+++ b/cakeClicker.html
@@ -12,6 +12,7 @@ and reward systems.
     <title>Cake Clicker Game</title>
     <link rel="stylesheet" href="./css/cake.css">
     <meta name="viewport" content="width=device-width">
+    <script src="js/script.js"></script>
 </head>
 
 <body>
