--- a/cakeClicker.html
+++ b/cakeClicker.html
@@ -61,11 +61,11 @@ and reward systems.
           <h1>Rewards: Here's what you accomplished</h1>
         </div>
         <div id="rewards">
-          <div class="rewardUnlocked" id="reward1">First Cake (1 cake)</div>
-          <div class="rewardUnlocked" id="reward2">Baking School Graduate (100 cakes)</div>
-          <div class="rewardUnlocked" id="reward3">Opening a bakery (1000 cakes)</div>
-          <div class="rewardUnlocked" id="reward3">Opening a cake factory (10000 cakes)</div>
-          <div class="rewardUnlocked" id="reward3">Opening a bakery chain (100000 cakes)</div>
+          <div class="rewardUnlocked" id="reward1">🏆 First Cake (1 cake)</div>
+          <div class="rewardUnlocked" id="reward2">🏆 Baking School Graduate (100 cakes)</div>
+          <div class="rewardUnlocked" id="reward3">🏆 Opening a bakery (1000 cakes)</div>
+          <div class="rewardUnlocked" id="reward3">🏆 Opening a cake factory (10000 cakes)</div>
+          <div class="rewardUnlocked" id="reward3">🏆 Opening a bakery chain (100000 cakes)</div>
         </div>
       </div>
         
