--- a/cakeClicker.html
+++ b/cakeClicker.html
@@ -48,10 +48,10 @@ and reward systems.
           <h1>Store: Buy upgrades</h1>
         </div>
         <div id="selections">
-          <button class="upgrades" id="upClick1">Increase Click Value (+1 click)</button>
-          <button class="upgrades" id="upClick2">Increase Click Value (+5 click)</button>
-          <button class="upgrades" id="upClick3">Increase Click Value (+10 click)</button>
-          <button class="upgrades" id="autoClick">Hire Baker (auto click)</button>
+          <button class="upgrades" id="upClick1">Increase Click Value (+1 click) Cost: 10 Cakes</button>
+          <button class="upgrades" id="upClick2">Increase Click Value (+5 click) Cost: 50 Cakes</button>
+          <button class="upgrades" id="upClick3">Increase Click Value (+10 click) Cost: 100 Cakes</button>
+          <button class="upgrades" id="autoClick">Hire Baker (auto click) Cost: 200 Cakes</button>
         </div>
       </div>
 
